--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lru-cache": "^11.2.2"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20251127.0",
     "@redis/client": "^5.10.0",
     "@types/memjs": "^1.3.3",
     "@types/node": "^24.10.1",
