--- a/package.json
+++ b/package.json
@@ -1,17 +1,33 @@
 {
   "name": "cachimbo",
   "version": "1.0.0",
+  "author": "Guilherme Chaguri",
+  "license": "Apache-2.0",
+  "description": "A caching library that allows you to layer different strategies in order to maximize the performance.",
   "type": "module",
-  "main": "index.js",
   "scripts": {
-    "test": "tsx ./src/test.ts"
+    "build": "rimraf dist && tsc -p tsconfig.build.json",
+    "test": "vitest",
+    "coverage": "vitest run --coverage --coverage.include=src/**/*.ts"
   },
   "keywords": [
-    "cache"
+    "cache",
+    "caching",
+    "redis",
+    "memcache",
+    "memcached",
+    "valkey",
+    "elasticache",
+    "stale-while-revalidate",
+    "request-coalescing",
+    "tiered-cache",
+    "multi-layer-cache",
+    "ttl",
+    "lru"
   ],
-  "author": "Guichaguri",
-  "license": "Apache-2.0",
-  "description": "",
+  "files": [
+    "dist"
+  ],
   "dependencies": {
     "@isaacs/ttlcache": "^2.1.2",
     "lru-cache": "^11.2.2"
@@ -21,10 +37,12 @@
     "@redis/client": "^5.10.0",
     "@types/memjs": "^1.3.3",
     "@types/node": "^24.10.1",
-    "bench-node": "^0.12.0",
+    "@vitest/coverage-v8": "^4.0.15",
     "ioredis": "^5.8.2",
     "memcache": "^1.0.0",
+    "rimraf": "^6.1.2",
     "tsx": "^4.20.6",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.15"
   }
 }
