--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@redis/client": "^5.10.0",
     "@types/memjs": "^1.3.3",
     "@types/node": "^24.10.1",
+    "@valkey/valkey-glide": "^2.2.1",
     "@vitest/coverage-v8": "^4.0.15",
     "ioredis": "^5.8.2",
     "iovalkey": "^0.3.3",
