--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@vitest/coverage-v8": "^4.0.15",
     "ioredis": "^5.8.2",
     "iovalkey": "^0.3.3",
+    "keyv": "^5.5.5",
     "memcache": "^1.0.0",
     "rimraf": "^6.1.2",
     "tsx": "^4.20.6",
