--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "author": "Guilherme Chaguri",
   "license": "Apache-2.0",
   "description": "A caching library that allows you to layer different strategies in order to maximize the performance.",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/Guichaguri/cachimbo.git"
+  },
   "type": "module",
   "scripts": {
     "build": "tsdown",
@@ -67,7 +71,6 @@
     "iovalkey": "^0.3.3",
     "keyv": "^5.5.5",
     "memcache": "^1.0.0",
-    "rimraf": "^6.1.2",
     "tsdown": "^0.17.0",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
