--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "cachimbo",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "author": "Guilherme Chaguri",
   "license": "Apache-2.0",
-  "description": "A caching library that allows you to layer different strategies in order to maximize the performance.",
+  "description": "An advanced caching library that allows you to layer different strategies in order to maximize the performance.",
   "repository": {
     "type": "git",
     "url": "git://github.com/Guichaguri/cachimbo.git"
