--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,7 @@
     "isolatedModules": true,
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "stripInternal": true
   }
 }
