--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "sample:ttl-cache": "tsx ./samples/3-ttl-cache.ts",
     "sample:coalescing-redis-cache": "tsx ./samples/4-coalescing-redis-cache.ts",
     "sample:swr-ttl-cache": "tsx ./samples/5-swr-ttl-cache.ts",
-    "sample:tiered-ttl-redis-cache": "tsx ./samples/6-tiered-ttl-redis-cache.ts"
+    "sample:tiered-ttl-redis-cache": "tsx ./samples/6-tiered-ttl-redis-cache.ts",
+    "sample:tiered-weak-ttl-swr-redis-cache": "tsx ./samples/7-tiered-weak-ttl-swr-redis.ts"
   },
   "keywords": [
     "cache",
