--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "test": "vitest",
     "coverage": "vitest run --coverage --coverage.include=src/**/*.ts",
     "prepack": "tsdown",
-
     "sample:no-cache": "tsx ./samples/1-no-cache.ts",
     "sample:redis-cache": "tsx ./samples/2-redis-cache.ts",
     "sample:ttl-cache": "tsx ./samples/3-ttl-cache.ts",
@@ -70,6 +69,7 @@
     "@types/node": "^24.10.4",
     "@valkey/valkey-glide": "^2.2.1",
     "@vitest/coverage-v8": "^4.0.16",
+    "hazelcast-client": "^5.3.0",
     "ioredis": "^5.8.2",
     "iovalkey": "^0.3.3",
     "keyv": "^5.5.5",
